my first commit

--- a/myloop.yml
+++ b/myloop.yml
@@ -2,11 +2,11 @@
 - hosts: all
   become: yes
   tasks: 
-  - name: install multi package
+  - name: install multi package 
     apt:
-     name: "{{item}}"
-     states: present
-    loop: 
-     - git:
-     - tree:
-     - wget:
+      name: "{{ item }}"
+      state: present
+    loop:
+     - git
+     - tree
+     - wget
