--- a/webserver.yml
+++ b/webserver.yml
@@ -1,18 +1,19 @@
 ---
-- hosts: webserver 
-  become: yes 
-  task: 
-  - name:  i want to install webserver on ansible node
-    apt: 
+- hosts: mywebservers
+  become: yes
+  tasks:
+  - name: i want to install web server on ansbile node
+    apt:
       name: apache2
       state: present
     when: ansible_os_family =="Debian"
 
-  - name: i want to start my webserver
-    service: 
+  - name: i want to start my webserver 
+    service:
       name: apache2
       state: started
     when: ansible_os_family =="Debian"
+
 
   - name: i want to install webserver RedHat ansible nodes
     yum:
@@ -20,9 +21,8 @@
       state: present
     when: ansible_os_family =="RedHat"
 
-  
-  - name: i want to start my webserver on RedHat ansible nodes
-    service: 
-      name: httpd
-      state: started
-    when: ansible_os_family =="RedHat"a
+  - name: i want to start my webserver on RedHat ansbile nodes
+    service:
+       name: httpd
+       state: started
+    when: ansible_os_family =="RedHat"
