--- a/mydebug.yml
+++ b/mydebug.yml
@@ -3,7 +3,7 @@
   become: yes 
   tasks:
 
-  - name: i want to execut linux command
+  - name: i want to execute linux command
     command: hostname -f
     regester: myresult
 
