--- a/mydebug.yml
+++ b/mydebug.yml
@@ -1,12 +1,11 @@
 ---
 - hosts: 172.31.38.29
-  become: yes 
+  become: yes
   tasks:
-  - name: i want to execute linux command
+  - name: i want to execute  linux command
     command: hostname -f
-    regester: myresult
-
-  - name: i want to display my first task result
+    register:  myresult
+    
+  - name: i want to  display my first tast  result
     debug:
        msg: "{{myresult}}"
-    
