--- a/mytages.yml
+++ b/mytages.yml
@@ -1,18 +1,22 @@
 ---
-- hosts: 172.31.38.29
+- hosts: 172.31.21.9 
   become: yes
-  task: 
+  tasks:
   - name: install git
-    apt: 
+    apt:
       name: git
       state: present
+    tags: mygit
     
+
   - name: install tree
-    apt:
+    apt:  
       name: tree
       state: present
+    tags: mytree
 
   - name: install wget
     apt: 
       name: wget
-      state: present      
+      state: present
+    tags: mywget
