this is my first commit

--- a/myerrorhalding.yml
+++ b/myerrorhalding.yml
@@ -10,7 +10,7 @@
   - name: install tree 
     apt: 
       name: tree 
-      state: present 
+      stateeee: present 
 
   - name: install wget 
     apt: 
