--- a/myfileshandling.yml
+++ b/myfileshandling.yml
@@ -8,8 +8,16 @@
     apt: 
       name: apache2 
       state: present 
-  
+    notify: restartwebserver
+
   - name: i want to copy index file into ansible node 
     template:
       src: myindex.j2
       dest: /var/www/html/index.html 
+    notify: restartwebserver 
+
+  handlers: 
+  - name: restartwebserver 
+    service: 
+      name: apache2 
+      state: restarted    
