--- a/mytomsetup.yml
+++ b/mytomsetup.yml
@@ -1,6 +1,5 @@
---- 
-- hosts: myapplicationserver
-  become: yes 
-  roles: 
+---
+- hosts: myapplicationservers
+  become: yes
+  roles:
    - {role: mytomcatrole, when: ansible_os_family =="Debian"}
-   
